MudStepper: Fix step number alignment (#9931)

--- a/src/MudBlazor/Styles/components/_stepper.scss
+++ b/src/MudBlazor/Styles/components/_stepper.scss
@@ -50,9 +50,12 @@
           justify-content: center;
           font-size: 12px;
           letter-spacing: 0;
-          line-height: 1;
           text-indent: 0;
           white-space: nowrap;
+
+          .mud-typography {
+            line-height: 1;
+          }
         }
 
         .mud-step-label-content {
